fix: bug squishing

--- a/public/styles.css
+++ b/public/styles.css
@@ -379,6 +379,7 @@ h2 {
 #totaliser {
   height: 100%;
   width: 90%;
+  margin-top: -3%;
   border-left: 3px solid grey;
   border-right: 3px solid grey;
   border-radius: 3px;
@@ -390,11 +391,6 @@ h2 {
   padding: 1px 20%;
 }
 
-#refresh-button {
-  display: block;
-  margin: auto;
-}
-
 hr {
   margin: 0 0 0 -4%;
   border: 4px solid grey;
@@ -403,9 +399,26 @@ hr {
 }
 
 #counter {
-  margin-top: 1%;
+  margin-top: -1%;
+  margin-left: -1%;
+  width: 103%;
   text-align: center;
   font-size: 1.5rem;
+  border: 3px solid gray;
+  border-radius: 3px;
+
+}
+
+#balance-text ul {
+  list-style: none;
+}
+
+#balance-display {
+  margin: 5% 0;
+}
+
+#transactions-text {
+  margin: 2% 0;
 }
 
 /* end of totaliser styles */
